--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </div>
       <br>
       <div>
-        <label>Втрое число</label>
+        <label>Втoрое число</label>
         <input  class="num2" type="number" placeholder="Введите число">
       </div>
       <div>
