--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
       </div>
       <p class="p"></p>
      </form>
-    <script src="/script.js"></script>
+    <script src="../script.js"></script>
     </body>
 </html>
